--- a/Compte rendu BDD.ipynb
+++ b/Compte rendu BDD.ipynb
@@ -8,11 +8,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Brouillon\n",
+    "- Redis\n",
+    "- MongoDB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: redis in c:\\users\\nayann\\anaconda3\\lib\\site-packages (5.0.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install redis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pymongo\n",
+      "  Obtaining dependency information for pymongo from https://files.pythonhosted.org/packages/c8/1a/1ba5578cc3acc8ef0dfd6eb9385f9c4b0fe3039665af93bcf062c34fcdb6/pymongo-4.6.1-cp311-cp311-win_amd64.whl.metadata\n",
+      "  Downloading pymongo-4.6.1-cp311-cp311-win_amd64.whl.metadata (22 kB)\n",
+      "Collecting dnspython<3.0.0,>=1.16.0 (from pymongo)\n",
+      "  Obtaining dependency information for dnspython<3.0.0,>=1.16.0 from https://files.pythonhosted.org/packages/f6/b4/0a9bee52c50f226a3cbfb54263d02bb421c7f2adc136520729c2c689c1e5/dnspython-2.4.2-py3-none-any.whl.metadata\n",
+      "  Downloading dnspython-2.4.2-py3-none-any.whl.metadata (4.9 kB)\n",
+      "Downloading pymongo-4.6.1-cp311-cp311-win_amd64.whl (472 kB)\n",
+      "   ---------------------------------------- 0.0/472.7 kB ? eta -:--:--\n",
+      "    --------------------------------------- 10.2/472.7 kB ? eta -:--:--\n",
+      "   ----- ---------------------------------- 61.4/472.7 kB 1.7 MB/s eta 0:00:01\n",
+      "   ------------------------- -------------- 307.2/472.7 kB 3.8 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 472.7/472.7 kB 4.2 MB/s eta 0:00:00\n",
+      "Downloading dnspython-2.4.2-py3-none-any.whl (300 kB)\n",
+      "   ---------------------------------------- 0.0/300.4 kB ? eta -:--:--\n",
+      "   ---------------------------------------  297.0/300.4 kB 9.2 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 300.4/300.4 kB 6.2 MB/s eta 0:00:00\n",
+      "Installing collected packages: dnspython, pymongo\n",
+      "Successfully installed dnspython-2.4.2 pymongo-4.6.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pymongo"
+   ]
   }
  ],
  "metadata": {
