--- a/Compte rendu BDD.ipynb
+++ b/Compte rendu BDD.ipynb
@@ -68,6 +68,23 @@
    "source": [
     "pip install pymongo"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('hello world')"
+   ]
   }
  ],
  "metadata": {
