MIse à jour après séance TP

--- a/Compte rendu BDD.ipynb
+++ b/Compte rendu BDD.ipynb
@@ -27,11 +27,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import redis\n",
+    "\n",
+    "# Créer une connexion à Redis\n",
+    "connection = redis.StrictRedis(host='192.168.0.5', port=6379, db=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "pip install pymongo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MongoClient(host=['192.168.0.5:27017'], document_class=dict, tz_aware=False, connect=True)\n",
+      "Database(MongoClient(host=['192.168.0.5:27017'], document_class=dict, tz_aware=False, connect=True), 'test')\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pymongo\n",
+    "\n",
+    "# Connexion à MongoDB\n",
+    "client = pymongo.MongoClient(\"mongodb://192.168.0.5:27017/\")\n",
+    "\n",
+    "print(client)\n",
+    "\n",
+    "db_name = \"test\"\n",
+    "db = client[db_name]\n",
+    "print(db)\n"
    ]
   }
  ],
