Commit après test connexion redis

--- a/Compte rendu BDD.ipynb
+++ b/Compte rendu BDD.ipynb
@@ -11,30 +11,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Brouillon\n",
-    "- Redis\n",
-    "- MongoDB"
+    "#### Les installations :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: redis in c:\\users\\nayann\\anaconda3\\lib\\site-packages (5.0.1)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install redis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "arabe salope\n"
+     ]
+    }
+   ],
    "source": [
     "import redis\n",
     "\n",
     "# Créer une connexion à Redis\n",
-    "connection = redis.StrictRedis(host='192.168.0.5', port=6379, db=0)"
+    "connection = redis.Redis(host='localhost', port=6379, decode_responses=True)\n",
+    "\n",
+    "connection.set('foo', 'arabe salope')\n",
+    "\n",
+    "print(connection.get('foo'))"
    ]
   },
   {
