rajout de la fonction de test du filtre bloom

--- a/Compte rendu BDD.ipynb
+++ b/Compte rendu BDD.ipynb
@@ -33,27 +33,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test du filtre bloom sur Redis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "arabe salope\n"
+      "Start to create the bloom filter over 14000 inputs\n",
+      "CPU Execution time: 7.90625 seconds\n",
+      "We found 1509 duplicates in the input\n"
      ]
     }
    ],
    "source": [
     "import redis\n",
+    "import csv\n",
+    "from json import dumps\n",
+    "import time\n",
     "\n",
-    "# Créer une connexion à Redis\n",
-    "connection = redis.Redis(host='localhost', port=6379, decode_responses=True)\n",
+    "def perf_bloom(csv_file, n) :\n",
+    "    # Créer une connexion à Redis\n",
+    "    connection = redis.Redis(host='localhost', port=6380, decode_responses=True)\n",
     "\n",
-    "connection.set('foo', 'arabe salope')\n",
+    "    connection.delete(\"bloom\")\n",
+    "    connection.execute_command(\"BF.RESERVE\", \"bloom\", \"0.01\", \"1700000\")\n",
     "\n",
-    "print(connection.get('foo'))"
+    "    with open(csv_file, encoding='utf-8') as csvfile:\n",
+    "        my_reader = csv.DictReader(csvfile, delimiter='\\t')\n",
+    "        my_data = [my_row for my_row in my_reader]\n",
+    "\n",
+    "        pres = dup = 0\n",
+    "        print('Start to create the bloom filter over', n, 'inputs')\n",
+    "        st = time.process_time()\n",
+    "\n",
+    "        for my_row in my_data[0:n]:\n",
+    "            if not connection.execute_command(\"BF.EXISTS\", \"bloom\", my_row['M']):\n",
+    "                connection.execute_command(\"BF.ADD\", \"bloom\", my_row['M'])\n",
+    "                pres = pres + 1\n",
+    "            else:\n",
+    "                dup = dup + 1\n",
+    "\n",
+    "        et = time.process_time()\n",
+    "        res = et - st\n",
+    "        print('CPU Execution time:', res, 'seconds')\n",
+    "        print('We found', dup, 'duplicates in the input')\n",
+    "\n",
+    "# Step 1\n",
+    "perf_bloom(\"DEMO.csv\", 14000)"
    ]
   },
   {
