mise à jour de la partie Redis

--- a/Compte rendu BDD.ipynb
+++ b/Compte rendu BDD.ipynb
@@ -11,7 +11,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Les installations :"
+    "# Bla bla"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Encore plus de blabla"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Redis : "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Blabla qui parle vite fait de redis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test du filtre bloom sur Redis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Les installations et importations pour tester le filtre bloom sur Redis :"
    ]
   },
   {
@@ -21,13 +56,6 @@
    "outputs": [],
    "source": [
     "pip install redis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Test du filtre bloom sur Redis"
    ]
   },
   {
@@ -76,7 +104,7 @@
     "        print('We found', dup, 'duplicates in the input')\n",
     "\n",
     "# Step 1\n",
-    "perf_bloom(\"DEMO.csv\", 14000)"
+    "perf_bloom(\"DEMO.csv\", 1400)"
    ]
   },
   {
@@ -142,21 +170,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "r = redis.Redis(host=\"localhost\", port=6380, decode_responses=True)\n",
-    "\n",
-    "jsonData = {\n",
-    "    \"nom\":\"Andriamisa\",\n",
-    "    \"prenom\":\"Nayann\"\n",
-    "}\n",
-    "\n",
-    "jsonTest = json.dumps(jsonData)\n",
-    "r.publish('testPubSub', jsonTest)\n",
-    "print(r.get('testPubSub'))"
+    "### Les installations et importations utilisées pour tester PUB/SUB avec Redis"
    ]
   },
   {
@@ -174,18 +191,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "import redis\n",
+    "\n",
+    "import json\n",
     "import random\n",
     "from datetime import datetime\n",
-    "import time"
+    "import time\n",
+    "import schedule\n",
+    "\n",
+    "r = redis.Redis(host=\"localhost\", port=6380, decode_responses=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Publisher"
+    "#### Publisher"
    ]
   },
   {
@@ -209,15 +230,7 @@
     "    \n",
     "    r.publish('testPubSub', json_data)\n",
     "\n",
-    "    print(r.get('testPubSub'))\n",
-    "    \n",
-    "    subscriber = r.pubsub()\n",
-    "\n",
-    "    subscriber.subscribe('testPubSub')\n",
-    "\n",
-    "    for message in subscriber.listen():\n",
-    "        if message['type '] == 'message':\n",
-    "            print(f\"Reçu : {message['data'].decode('utf-8')}\")\n",
+    "    #print(r.get('testPubSub'))\n",
     "\n",
     "    time.sleep(random.uniform(1, 3))"
    ]
@@ -226,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Subscriber"
+    "#### Subscriber"
    ]
   },
   {
@@ -235,27 +248,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import redis\n",
-    "\n",
-    "subscriber = r.pubsub()\n",
-    "\n",
-    "subscriber.subscribe('testPubSub')\n",
-    "\n",
-    "for message in subscriber.listen():\n",
-    "    if message['type '] == 'message':\n",
-    "        print(f\"Reçu : {message['data'].decode('utf-8')}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import redis\n",
-    "import schedule\n",
-    "import time\n",
-    "\n",
     "def func():\n",
     "    global my_list\n",
     "    #\n",
@@ -265,9 +257,7 @@
     "    \tprint(\"La moyenne des valeurs de CO2 sur la dernière minute est:\", sum(my_list) / len(my_list))\n",
     "    my_list.clear()\n",
     "\n",
-    "schedule.every(1).minutes.do(func)\n",
-    "\n",
-    "r = redis.Redis(host='localhost', port=6380, db=0)\n",
+    "schedule.every(10).seconds.do(func)\n",
     "\n",
     "p = r.pubsub()\n",
     "p.psubscribe('testPubSub')\n",
@@ -283,7 +273,8 @@
     "    if m != None:\n",
     "       if not first_message:\n",
     "          print('Message reçu:', m['data'])\n",
-    "          data_str = m['data'].decode('utf-8')  # Décoder les bytes en str\n",
+    "          data_str = m['data']\n",
+    "          #data_str = m['data'].decode('utf-8')  # Décoder les bytes en str\n",
     "          data_dict = json.loads(data_str)  # Charger la chaîne JSON en un dictionnaire Python\n",
     "          co2_value = data_dict.get('co2_value')\n",
     "          if co2_value is not None:\n",
@@ -293,6 +284,20 @@
     "        print(\"Erreur : ça marche pas\")\n",
     "        first_message = False\n",
     "        time.sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## MongoDB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Blabla"
    ]
   },
   {
@@ -306,20 +311,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pymongo\n",
+    "import pymongo\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "connection = pymongo.MongoClient(host=\"localhost\", port=27017)\n",
     "\n",
-    "# Connexion à MongoDB\n",
-    "client = pymongo.MongoClient(\"mongodb://192.168.0.5:27017/\")\n",
-    "\n",
-    "print(client)\n",
-    "\n",
-    "db_name = \"test\"\n",
-    "db = client[db_name]\n",
-    "print(db)\n"
+    "db_name = \"nayann\""
    ]
   }
  ],
