debut mise en forme

--- a/Compte rendu BDD.ipynb
+++ b/Compte rendu BDD.ipynb
@@ -4,21 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compte rendu R5.A.10, ANDRIAMISA Nayann, Groupe Nayru"
+    "## Compte rendu R5.A.10, ANDRIAMISA Nayann, Groupe Nayru\n",
+    "<br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bla bla"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Encore plus de blabla"
+    "Dans ce fichier, nous verrons un compte rendu de la ressource du BUT informatique (R5.A.10) portant sur les nouvelles bases de données.\n",
+    "<br>Elle est découpée en 2 grandes parties qui sont respectivement sur les Systèmes de Gestion de Base de Données (SGBD) <b>Redis</b> et <b>MongoDB</b>. \n",
+    "<br><br>"
    ]
   },
   {
@@ -32,21 +28,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Blabla qui parle vite fait de redis"
+    "Redis est un SGBD et aussi un gestionnaire NoSQL <i>(Not Only SQL)</i> qui permet d'adopter le modèle \"clé-valeur\" pour sa structure de données.<br>\n",
+    "...<br>\n",
+    "Nous allons donc tester la structure de données par un filtre de bloom\n",
+    "<br><br>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test du filtre bloom sur Redis"
+    "### <u>Test du filtre de bloom sur Redis</u>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Les installations et importations pour tester le filtre bloom sur Redis :"
+    "##### Les installations et importations pour tester le filtre de bloom sur Redis :"
    ]
   },
   {
@@ -68,6 +67,13 @@
     "import csv\n",
     "from json import dumps\n",
     "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Le code python implémentant les Blooms filters"
    ]
   },
   {
@@ -311,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,13 +326,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "connection = pymongo.MongoClient(host=\"localhost\", port=27017)\n",
     "\n",
-    "db_name = \"nayann\""
+    "db = connection[\"db_R5A10\"]\n",
+    "\n",
+    "collection = db[\"test_bd_jupyter\"]\n",
+    "\n",
+    "data = {\"nom\":\"Andriamisa\", \"Prenom\":\"Nayann\"}\n",
+    "collection.insert_one(data)\n",
+    "\n",
+    "for doc in collection.find() :\n",
+    "    print(doc)\n"
    ]
   }
  ],
