Mise à jour du compte rendu

--- a/Compte rendu BDD.ipynb
+++ b/Compte rendu BDD.ipynb
@@ -42,9 +42,9 @@
     "    </ol>\n",
     "    <li><strong>MongoDB</strong></li>\n",
     "    <ol>\n",
-    "        <li>Bloom filters </li>\n",
-    "        <li>SET_PY</li>\n",
-    "        <li>PUB/SUB</li>\n",
+    "        <li>Premiers pas avec MongoDB</li>\n",
+    "        <li>Performances avec indexe</li>\n",
+    "        <li>Performances sans indexe</li>\n",
     "    </ol>\n",
     "</ol>  "
    ]
