--- a/Compte rendu BDD.ipynb
+++ b/Compte rendu BDD.ipynb
@@ -39,6 +39,7 @@
     "        <li>Performances avec indexe</li>\n",
     "        <li>Performances sans indexe</li>\n",
     "    </ol>\n",
+    "    <li><strong>Conclusion</strong></li>\n",
     "</ol>  "
    ]
   },
@@ -220,16 +221,20 @@
    "outputs": [],
    "source": [
     "with open('bddPilotes/JSON/AVIONS.json', 'r') as file:\n",
-    "    data = json.load(file)\n",
-    "    print(data)\n",
+    "    data = pd.read_json(file)\n",
+    "    print(data.head())\n",
+    "\n",
+    "print(\"\\n\")\n",
     "\n",
     "with open('bddPilotes/JSON/PILOTES.json', 'r') as file:\n",
-    "    data = json.load(file)\n",
-    "    print(data)\n",
+    "    data = pd.read_json(file)\n",
+    "    print(data.head())\n",
+    "\n",
+    "print(\"\\n\")\n",
     "\n",
     "with open('bddPilotes/JSON/VolsClassesReservations.json', 'r') as file:\n",
-    "    data = json.load(file)\n",
-    "    print(data)"
+    "    data = pd.read_json(file)\n",
+    "    print(data.head())"
    ]
   },
   {
@@ -245,18 +250,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def jointure(fic1, fic2, attribut) :\n",
-    "    mapping_data1 = {item[colonne_jointure]: item for item in data1}\n",
+    "def csv_to_json(csv_file):\n",
     "\n",
-    "    # Fusionner les données en fonction de la colonne de jointure\n",
-    "    resultat = []\n",
-    "    for item2 in data2:\n",
-    "        item1 = mapping_data1.get(item2[colonne_jointure], {})\n",
-    "        resultat.append({**item1, **item2})\n",
+    "    data_dict = {}\n",
+    "    my_dict = {}\n",
+    "    with open(csv_file, encoding = 'utf8') as csvfile:\n",
+    "        my_reader = csv.DictReader(csvfile)\n",
+    "        print(my_reader.fieldnames)\n",
+    "        my_data = [my_row for my_row in my_reader]\n",
+    "        for my_row in my_data:\n",
+    "            #print(my_row)\n",
+    "            my_dict = {}\n",
+    "            my_dict[my_reader.fieldnames[0]] = my_row[my_reader.fieldnames[0]]\n",
+    "            my_dict[my_reader.fieldnames[1]] = my_row[my_reader.fieldnames[1]]\n",
+    "            data_dict[my_row[my_reader.fieldnames[2]]] = my_dict\n",
+    "    print(\"====================\")\n",
+    "    my_my_dict = {}\n",
+    "    my_my_dict['test'] = data_dict\n",
+    "    print(my_my_dict)\n",
+    "    #for item in data_dict.items():\n",
+    "    #    print(item)\n",
+    "    #\n",
+    "    # convert both intermediary results to JSON object\n",
+    "    #\n",
+    "    y = json.dumps(my_my_dict)\n",
+    "    print(\"====================\")\n",
+    "    print(y)\n",
+    "    print(\"====================\")\n",
     "\n",
-    "    return resultat\n",
+    "    return y\n",
     "\n",
-    "'''\n",
     "def jointure(json1, json2):\n",
     "\n",
     "    from json import loads\n",
@@ -291,7 +314,14 @@
     "    z = dumps(my_my_dict)\n",
     "\n",
     "    return z\n",
-    "'''"
+    "\n",
+    "# Main program\n",
+    " \n",
+    "json_one = csv_to_json(\"bddPilotes/CSV/AVIONS.csv\")\n",
+    "json_two = csv_to_json(\"bddPilotes/CSV/CLIENTS.csv\")\n",
+    "\n",
+    "d = jointure (json_one, json_two)\n",
+    "print(d)"
    ]
   },
   {
@@ -403,27 +433,27 @@
     "    client.execute_command(\"BF.RESERVE\", \"bloom\", \"0.01\", \"1700000\")\n",
     "\n",
     "    with open(csv_file, encoding='utf-8') as csvfile:\n",
-    "        my_reader = csv.DictReader(csvfile, delimiter='\\t')\n",
+    "        my_reader = csv.DictReader(csvfile, delimiter=',')\n",
     "        my_data = [my_row for my_row in my_reader]\n",
     "\n",
     "        pres = dup = 0\n",
-    "        print('Start to create the bloom filter over', n, 'inputs')\n",
+    "        print('Création du filtre bloom sur', n, 'entrées')\n",
     "        st = time.process_time()\n",
     "\n",
     "        for my_row in my_data[0:n]:\n",
-    "            if not client.execute_command(\"BF.EXISTS\", \"bloom\", my_row['M']):\n",
-    "                client.execute_command(\"BF.ADD\", \"bloom\", my_row['M'])\n",
+    "            if not client.execute_command(\"BF.EXISTS\", \"91630\", my_row['codecommune']):\n",
+    "                client.execute_command(\"BF.ADD\", \"91630\", my_row['codecommune'])\n",
     "                pres = pres + 1\n",
     "            else:\n",
     "                dup = dup + 1\n",
     "\n",
     "        et = time.process_time()\n",
     "        res = et - st\n",
-    "        print('CPU Execution time:', res, 'seconds')\n",
-    "        print('We found', dup, 'duplicates in the input')\n",
+    "        print('Temps d\\'exécution CPU :', res, 'secondes')\n",
+    "        print('Trouvé', dup, 'doublons dans l\\'entrée')\n",
     "\n",
     "# Step 1\n",
-    "perf_bloom(\"DEMO.csv\", 14000)"
+    "perf_bloom(\"pres2022comm.csv\", 2000)"
    ]
   },
   {
@@ -453,18 +483,18 @@
     "    r.delete(\"my_set\")\n",
     "\n",
     "    with open(csv_file, encoding = 'utf-8') as csvfile:\n",
-    "        my_reader = csv.DictReader(csvfile,delimiter='\\t')\n",
+    "        my_reader = csv.DictReader(csvfile,delimiter=',')\n",
     "        my_data = [my_row for my_row in my_reader]\n",
     "        #print(my_data)\n",
     "        pres = 0\n",
     "        dup = 0\n",
-    "        print('Start to create the set over',n,'inputs')\n",
+    "        print('Début du test de performance sur', n, 'entrées')\n",
     "        # get the start time\n",
     "        st = time.process_time()\n",
     "        for my_row in my_data[0:n]:\n",
     "            #print(my_row['M'])\n",
-    "            if not r.sismember(\"my_set\", my_row['M']):\n",
-    "                r.sadd(\"my_set\", my_row['M'])\n",
+    "            if not r.sismember(\"my_set\", my_row['codecommune']):\n",
+    "                r.sadd(\"my_set\", my_row['codecommune'])\n",
     "                pres += 1\n",
     "            else:\n",
     "                dup += 1\n",
@@ -472,21 +502,11 @@
     "        et = time.process_time()\n",
     "        # get execution time\n",
     "        res = et - st\n",
-    "        print('CPU Execution time:', res, 'seconds')\n",
-    "        print('We found',dup,'duplicates in the input')\n",
-    "        print()\n",
-    "        print('Wall time (also known as clock time or wall-clock time) is simply the total time')\n",
-    "        print('elapsed during the measurement. It\\'s the time you can measure with a stopwatch.')\n",
-    "        print('It is the difference between the time at which a program finished its execution and')\n",
-    "        print('the time at which the program started. It also includes waiting time for resources.')\n",
-    "        print()\n",
-    "        print('CPU Time, on the other hand, refers to the time the CPU was busy processing')\n",
-    "        print('the program\\'s instructions. The time spent waiting for other task to complete')\n",
-    "        print('(like I/O operations) is not included in the CPU time. It does not include')\n",
-    "        print('the waiting time for resources.')\n",
+    "        print('Temps d\\'exécution CPU :', res, 'secondes')\n",
+    "        print('Trouvé', dup, 'doublons dans l\\'entrée')\n",
     "#Step 1\n",
     " \n",
-    "perf_set(\"DEMO.csv\", 1400)"
+    "perf_set(\"pres2022comm.csv\", 2000)"
    ]
   },
   {
@@ -672,6 +692,8 @@
    "outputs": [],
    "source": [
     "import pymongo\n",
+    "import csv\n",
+    "import time\n",
     "\n",
     "connection = pymongo.MongoClient(host=\"localhost\", port=27017)"
    ]
@@ -684,31 +706,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "db = connection[\"db_R5A10\"]\n",
-    "\n",
-    "collection = db[\"test_bd_jupyter\"]\n",
-    "\n",
-    "# Ajout\n",
-    "data = {\"nom\":\"Andriamisa\", \"Prenom\":\"Nayann\"}\n",
-    "collection.insert_one(data)\n",
-    "data = {\"Date\":\"22-12-2023\", \"Jour\":\"Vendredi\"}\n",
-    "collection.insert_one(data)\n",
-    "\n",
-    "\n",
-    "# Modification\n",
-    "collection.update_one({\"Date\":\"22-12-2023\"},{\"$set\":{\"Date\":\"23-12-2023\"}})\n",
-    "\n",
-    "# Suppression\n",
-    "collection.delete_many({\"Date\":\"23-12-2023\"})\n",
-    "\n",
-    "# Consultation\n",
-    "for doc in collection.find() :\n",
-    "    print(doc)\n"
+    "Nous pouvons voir dans la cellule suivante, différentes fonctions de la libraire Python **PyMongo** et qui nous permet d'intéragir avec la base de données MongoDB depuis ce fichier.\n",
+    "On a utilisé les fonctions d'ajout <code>insert_one()</code> et <code>insert_many()</code>, les fonctions de suppression <code>delete_one()</code> et <code>delete_many()</code>, les fonctions de modifications <code>update_one()</code> et <code>update_many()</code> ainsi que la fonction de consultation <code>find()</code>"
    ]
   },
   {
@@ -716,7 +718,136 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "db = connection[\"db_R5A10\"]\n",
+    "\n",
+    "collection = db[\"test_bd_jupyter\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ajout\n",
+    "data = {\"Nom\":\"Andriamisa\", \"Prenom\":\"Nayann\"}\n",
+    "collection.insert_one(data)\n",
+    "data1 = [\n",
+    "    {\"Date\":\"22-12-2023\", \"Jour\":\"Vendredi\", \"Mois\":\"Decembre\"},\n",
+    "    {\"Date\":\"23-12-2023\", \"Jour\":\"Samedi\", \"Mois\":\"Decembre\"},\n",
+    "    {\"Date\":\"01-01-2024\", \"Jour\":\"Lundi\", \"Mois\":\"Janvier\"},\n",
+    "    {\"Nom\":\"Andriamisa\", \"Prenom\":\"Dylan\"}\n",
+    "]\n",
+    "collection.insert_many(data1)\n",
+    "\n",
+    "\n",
+    "# Consultation\n",
+    "for doc in collection.find() :\n",
+    "    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Suppression\n",
+    "collection.delete_one({\"Nom\":\"Andriamisa\"})\n",
+    "collection.delete_many({\"Mois\":\"Decembre\"})\n",
+    "\n",
+    "\n",
+    "# Consultation\n",
+    "for doc in collection.find() :\n",
+    "    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modification\n",
+    "collection.update_one({\"Date\":\"01-01-2024\"},{\"$set\":{\"Date\":\"23-12-2024\",\"Mois\":\"Decembre\"}})\n",
+    "collection.update_many({\"Nom\":\"Andriamisa\"},{\"$set\":{\"Statut\":\"Etudiant\"}})\n",
+    "\n",
+    "\n",
+    "# Consultation\n",
+    "for doc in collection.find() :\n",
+    "    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 2. Les perfomances avec indexe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def perf_bl_mongo(csv_file, n):\n",
+    "    db = connection[\"db_R5A10\"]\n",
+    "    bloom_collection = db['bloom']\n",
+    "\n",
+    "    bloom_collection.drop()\n",
+    "\n",
+    "\n",
+    "    bloom_collection.create_index('codecommune', unique=True)\n",
+    "\n",
+    "    with open(csv_file, encoding='utf-8') as csvfile:\n",
+    "        my_reader = csv.DictReader(csvfile, delimiter=',')\n",
+    "        my_data = [my_row for my_row in my_reader]\n",
+    "\n",
+    "        pres = dup = 0\n",
+    "        print('Début de la vérification des doublons sur', n, 'entrées')\n",
+    "        st = time.process_time()\n",
+    "\n",
+    "        for my_row in my_data[:n]:\n",
+    "\n",
+    "            try:\n",
+    "                bloom_collection.insert_one({'codecommune': my_row['codecommune']})\n",
+    "                pres += 1\n",
+    "            except Exception as e:\n",
+    "\n",
+    "                dup += 1\n",
+    "\n",
+    "        et = time.process_time()\n",
+    "        res = et - st\n",
+    "        print('Temps d\\'exécution CPU :', res, 'secondes')\n",
+    "        print('Trouvé', dup, 'doublons dans l\\'entrée')\n",
+    "\n",
+    "perf_bl_mongo(\"pres2022comm.csv\", 2000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Conclusion**\n",
+    "Dans le cadre de cette ressource sur les nouvelles bases de données (R5.A.10), nous avons exploré différentes facettes des bases de données, notamment la dénormalisation d'un schéma relationnel et l'étude de deux systèmes de gestion de bases de données (SGBD) NoSQL, à savoir Redis et MongoDB.\n",
+    "\n",
+    "### **Dénormalisation**\n",
+    "La dénormalisation a été abordée comme une technique visant à fusionner des tables SQL en une seule entité, réduisant ainsi le besoin de jointures fréquentes. Les critères à respecter pour la dénormalisation ont été présentés, et un exemple concret de dénormalisation d'un schéma relationnel SQL a été illustré.\n",
+    "\n",
+    "### **Redis**\n",
+    "Redis, en tant que SGBD NoSQL, a été exploré dans divers aspects. Nous avons couvert l'utilisation des filtres de Bloom sur Redis pour tester l'appartenance d'un élément à un ensemble. Les performances de Redis, en particulier avec l'utilisation de Bloom Filters et l'ensemble SET_PY, ont été évaluées. De plus, nous avons exploré le modèle de publication/abonnement (PUB/SUB) avec un exemple concret utilisant des messages CO2 générés aléatoirement.\n",
+    "\n",
+    "### **MongoDB**\n",
+    "MongoDB, un autre SGBD NoSQL, a été présenté en détail. Nous avons effectué des opérations de base telles que l'ajout, la consultation, la suppression et la modification de données dans MongoDB. Les performances de MongoDB ont été évaluées en utilisant des index pour améliorer la recherche des doublons dans un ensemble de données.\n",
+    "\n",
+    "### **Performances Comparées**\n",
+    "En termes de performances, Redis s'est avéré légèrement plus rapide dans l'utilisation de la structure de données Bloom Filters, avec une moyenne de 0.8 seconde par rapport à MongoDB qui a montré une moyenne de 1.2 secondes pour 2000 entrées sur le même fichier \"DEMO.csv\".\n",
+    "\n",
+    "### **Conclusion Générale**\n",
+    "Le choix entre Redis et MongoDB dépend des besoins spécifiques d'utilisation et du modèle de données. Redis est souvent privilégié pour des opérations rapides en mémoire, tandis que MongoDB peut être plus adapté pour des applications nécessitant des opérations de recherche complexes sur des ensembles de données volumineux."
+   ]
   }
  ],
  "metadata": {
